[package]
name = "dusk-varint"
version = "0.1.0"
authors = ["Lewin Bormann <lbo@spheniscida.de>", "Kristoffer Ström <kristoffer@dusk.network>"]
description = "varint+zigzag integer encoding/decoding (no_std)"
repository = "https://github.com/dusk-network/dusk-varint"
documentation = "https://docs.rs/dusk-varint/"
license = "MIT"
keywords = ["integer", "varint", "zigzag"]
edition = "2018"

[dev-dependencies]
bencher = "~0.1"

[[bench]]
name = "main"
harness = false
